fix bug on IE

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -30,7 +30,8 @@ nav {
     max-height: 55px;
     line-height: 53px;
     border-bottom: 1px solid #ccc;
-    background-color: rgb(242, 242, 242, 0.92);
+    background-color:#e1e1e1;
+    opacity: 0.92;
     position: absolute;
 }
 
@@ -102,7 +103,8 @@ nav {
     border-bottom: 0.5px solid #ccc;
     border-left: 0.5px solid #ccc;
     border-right: 0.5px solid #ccc;
-    background: rgb(242, 242, 242, 0.92);
+    background-color:#e1e1e1;
+    opacity: 0.92;
     position: relative;
     z-index: 20;
     display: none;
